--- a/README.adoc
+++ b/README.adoc
@@ -13,6 +13,8 @@ https://github.com/rubocop-hq/rubocop[RuboCop], a static code analyzer (linter) 
 
 This guide assumes you are using RSpec 3 or later.
 
+You can generate a PDF or an HTML copy of this guide using https://asciidoctor.org/docs/asciidoctor-pdf/[AsciiDoctor PDF].
+
 == How to Read This Guide
 
 The guide is separated into sections based on the different pieces of an entire spec file. There was an attempt to omit all obvious information, if anything is unclear, feel free to open an issue asking for further clarity.
