Enable syntax-highlighting for the HTML version of the guide

--- a/README.adoc
+++ b/README.adoc
@@ -8,6 +8,7 @@
 ifndef::backend-pdf[]
 :toc-title: pass:[<h2>Table of Contents</h2>]
 endif::[]
+:source-highlighter: rouge
 
 This RSpec style guide outlines the recommended best practices for real-world programmers to write code that can be maintained by other real-world programmers.
 
