--- a/README.adoc
+++ b/README.adoc
@@ -1288,9 +1288,9 @@ it 'returns JSON with temperature in Celsius' do
   expect(json[:celsius]).to eq 30
 end
 
-it 'returns JSON with temperature in Farenheit' do
+it 'returns JSON with temperature in Fahrenheit' do
   json = JSON.parse(response.body).with_indifferent_access
-  expect(json[:farenheit]).to eq 86
+  expect(json[:fahrenheit]).to eq 86
 end
 
 # good
@@ -1298,8 +1298,8 @@ it 'returns JSON with temperature in Celsius' do
   expect(response).to include_json(celsius: 30)
 end
 
-it 'returns JSON with temperature in Farenheit' do
-  expect(response).to include_json(farenheit: 86)
+it 'returns JSON with temperature in Fahrenheit' do
+  expect(response).to include_json(fahrenheit: 86)
 end
 ----
 
