--- a/README.adoc
+++ b/README.adoc
@@ -323,7 +323,7 @@ end
 describe '#attributes' do
   context 'when display name is present' do
     before do
-      subject.display_name = 'something'
+      article.display_name = 'something'
     end
 
     it 'includes the display name' do
@@ -334,18 +334,19 @@ end
 
 # good
 describe '#attributes' do
-  subject { FactoryBot.create(:article) }
+  let(:article) { FactoryBot.create(:article) }
+  subject { article.attributes }
 
   specify do
-    expect(subject.attributes).to include subject.display_name
-    expect(subject.attributes).to include subject.created_at
+    expect(subject).to include article.display_name
+    expect(subject).to include article.created_at
   end
 end
 
 describe '#attributes' do
   context 'when display name is present' do
     before do
-      subject.display_name = 'something'
+      article.display_name = 'something'
     end
 
     it 'includes the display name' do
@@ -355,7 +356,7 @@ describe '#attributes' do
 
   context 'when display name is not present' do
     before do
-      subject.display_name = nil
+      article.display_name = nil
     end
 
     it 'does not include the display name' do
@@ -914,13 +915,13 @@ Always use https://github.com/travisjeffery/timecop[Timecop] instead of stubbing
 it 'offsets the time 2 days into the future' do
   current_time = Time.now
   allow(Time).to receive(:now).and_return(current_time)
-  expect(subject.get_offset_time).to eq(current_time + 2.days)
+  expect(subject).to eq(current_time + 2.days)
 end
 
 # good
 it 'offsets the time 2 days into the future' do
   Timecop.freeze(Time.now) do
-    expect(subject.get_offset_time).to eq 2.days.from_now
+    expect(subject).to eq 2.days.from_now
   end
 end
 ----
