Correct `include` for attributes hash
Co-authored-by: Phil Pirozhkov <pirj@users.noreply.github.com>

--- a/README.adoc
+++ b/README.adoc
@@ -338,7 +338,7 @@ describe '#attributes' do
   subject { article.attributes }
 
   specify do
-    expect(subject).to include article.display_name
+    expect(subject).to include(display_name: article.display_name)
     expect(subject).to include article.created_at
   end
 end
